--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <script defer src="timer.js"> </script>
+    <title>TTT-App</title>
 </head>
 <body>
-    
+    <div class="timer-block">
+        <span id="timer"> 00:00:00 </span>
+        <button id="Startbutton"> Start </button>
+    </div>
 </body>
 </html>
