visual changes and logos

--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,22 @@
     <div class="wholepage">
         <nav class="sidebar">
             <div class="upperNavButtons">
-                <a href=""> menu</a>
-                <a href=""> tasks</a>
-                <a href=""> daily</a>
-                <a href="">month</a>
-                <a href=""">year</a>
+                <a href=""> <img src="Visuals/menu.png" width="35px"></a>
+                <a href=""> <img src="Visuals/task.png" width="35px"></a>
+                <a href=""> <img src="Visuals/daily.png" width="30px"></a>
+                <a href=""> <img src="Visuals/monthly.png" width="30px"></a>
+                <a href="""> <img src="Visuals/yearly.png" width="35px"></a>
             </div>
             <div class="lowerNavButtons">
-                <a href=""> <img src="Visuals/settings.png" width="40px"> </a>
-                <a href="">exit</a>
+                <a href=""> <img src="Visuals/settings.png" width="35px"> </a>
+                <a href=""> <img src="Visuals/exit.png" width="30px"></a>
             </div>
         </nav>   
         <div class="MainView">
             <div class="selector">
                 <label for="clockedTask"></label>
                 <select name="clockedTask">
+                    <option value=""> Select task here</option>
                     <option value="task1 "> task1</option>
                     <option value="task2"> task2 </option>
                 </select>
